--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                     </div><!-- /c-header-avatar -->
 
                                 </div><!-- /c-header__inner-header -->
+                                    <a href="//www.dmca.com/Protection/Status.aspx?ID=5c27828f-450e-4980-916e-4963f6cd188e" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-08.png?ID=5c27828f-450e-4980-916e-4963f6cd188e"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
                             </header><!-- /o-section__header -->
 
                             <div class="o-section__content  c-header__content  t-section__content">
